--- a/templates/minimal_flipbook_double_crochet.html
+++ b/templates/minimal_flipbook_double_crochet.html
@@ -4,6 +4,7 @@
     <title>A minimal flipbook</title>
     <meta charset="utf-8" />
     <meta name="author" content="You!" />
+    <script src="libs/header-attrs-2.6/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/hygge.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/ninjutsu.css" rel="stylesheet" />
@@ -1015,6 +1016,7 @@ class: inverse
 - This minimal flipbook assumes you are online when you build and view.  It is going to find the most recent remark.js info online.
 
 - xaringan/remark.js slideshows are not self contained, single file slide shows.  Make sure you ship all the associated files that are created to display your flipbooks/slideshows.  I like to push .html and associated files to github repository and use Github Pages to host for beyond local sharing. :-)
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
